@@ -30,6 +30,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.2b0
 
 Fixes:
 
+- Themes:   Fixed theme/custom settings inconsistency #165
 - Plot:     Fixed automatic boundaries #170
 - Tips:     Fixed weird tooltip behavior #171
 - Callback: Fixed mouse move callback for main window.
